[gd_scene load_steps=10 format=2]

[ext_resource path="res://PlayerCharacter/PlayerCharacter.tscn" type="PackedScene" id=1]
[ext_resource path="res://tiles/tiles.tres" type="TileSet" id=2]
[ext_resource path="res://HandCharacter/HandCharacter.tscn" type="PackedScene" id=3]
[ext_resource path="res://MainScene/MainScene.gd" type="Script" id=4]
[ext_resource path="res://GUI.tscn" type="PackedScene" id=5]
[ext_resource path="res://gameover.wav" type="AudioStream" id=6]
[ext_resource path="res://slap.wav" type="AudioStream" id=7]
[ext_resource path="res://crunch.wav" type="AudioStream" id=8]
[ext_resource path="res://bgm.wav" type="AudioStream" id=9]

[node name="Node2D" type="Node2D"]
script = ExtResource( 4 )

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true
zoom = Vector2( 0.25, 0.25 )
drag_margin_left = 1.0
drag_margin_top = 1.0
drag_margin_right = 1.0
drag_margin_bottom = 1.0
editor_draw_limits = true
editor_draw_drag_margin = true

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 0, 0, 1, 1, 0, 2, 2, 0, 2, 3, 0, 2, 4, 0, 2, 5, 0, 2, 6, 0, 2, 7, 0, 2, 8, 0, 2, 9, 0, 2, 10, 0, 2, 11, 0, 2, 12, 0, 2, 13, 0, 2, 14, 0, 2, 15, 0, 3, 65536, 0, 4, 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 0, 0, 65542, 0, 0, 65543, 0, 0, 65544, 0, 0, 65545, 0, 0, 65546, 0, 0, 65547, 0, 0, 65548, 0, 0, 65549, 0, 0, 65550, 0, 0, 65551, 0, 5, 131072, 0, 4, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 131081, 0, 0, 131082, 0, 0, 131083, 0, 0, 131084, 0, 0, 131085, 0, 0, 131086, 0, 0, 131087, 0, 5, 196608, 0, 4, 196609, 0, 0, 196610, 0, 0, 196611, 0, 0, 196612, 0, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 196617, 0, 0, 196618, 0, 0, 196619, 0, 0, 196620, 0, 0, 196621, 0, 0, 196622, 0, 0, 196623, 0, 5, 262144, 0, 4, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0, 262152, 0, 0, 262153, 0, 0, 262154, 0, 0, 262155, 0, 0, 262156, 0, 0, 262157, 0, 0, 262158, 0, 0, 262159, 0, 5, 327680, 0, 4, 327681, 0, 0, 327682, 0, 0, 327683, 0, 0, 327684, 0, 0, 327685, 0, 0, 327686, 0, 0, 327687, 0, 0, 327688, 0, 0, 327689, 0, 0, 327690, 0, 0, 327691, 0, 0, 327692, 0, 0, 327693, 0, 0, 327694, 0, 0, 327695, 0, 5, 393216, 0, 4, 393217, 0, 0, 393218, 0, 0, 393219, 0, 0, 393220, 0, 0, 393221, 0, 0, 393222, 0, 0, 393223, 0, 0, 393224, 0, 0, 393225, 0, 0, 393226, 0, 0, 393227, 0, 0, 393228, 0, 0, 393229, 0, 0, 393230, 0, 0, 393231, 0, 5, 458752, 0, 4, 458753, 0, 0, 458754, 0, 0, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0, 458758, 0, 0, 458759, 0, 0, 458760, 0, 0, 458761, 0, 0, 458762, 0, 0, 458763, 0, 0, 458764, 0, 0, 458765, 0, 0, 458766, 0, 0, 458767, 0, 5, 589823, 0, 0, 524288, 0, 6, 524289, 0, 7, 524290, 0, 7, 524291, 0, 7, 524292, 0, 7, 524293, 0, 7, 524294, 0, 7, 524295, 0, 7, 524296, 0, 7, 524297, 0, 7, 524298, 0, 7, 524299, 0, 7, 524300, 0, 7, 524301, 0, 7, 524302, 0, 7, 524303, 0, 65536, 524304, 0, 0, 589824, 0, 2, 589825, 0, 2, 589826, 0, 2, 589827, 0, 2, 589828, 0, 2, 589829, 0, 2, 589830, 0, 2, 589831, 0, 2, 589832, 0, 2, 589833, 0, 2, 589834, 0, 2, 589835, 0, 2, 589836, 0, 2, 589837, 0, 2, 589838, 0, 2, 589839, 0, 2, 589840, 0, 2 )

[node name="PlayerCharacter" parent="." instance=ExtResource( 1 )]
position = Vector2( 39.0491, 25.187 )
move_speed = 64

[node name="HandCharacter" parent="." instance=ExtResource( 3 )]
position = Vector2( 94.17, 65.4552 )
target_path = NodePath("../PlayerCharacter")

[node name="GUI" parent="." instance=ExtResource( 5 )]

[node name="CrunchSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="GameoverSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="SlapSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="BGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -8.0
autoplay = true
[connection signal="slapped" from="PlayerCharacter" to="." method="_on_PlayerCharacter_slapped"]
[connection signal="slap" from="HandCharacter" to="." method="_on_HandCharacter_slap"]
